# cookiecutter_template

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: CONTRIBUTING.md  README.md  pyproject.toml
{{cookiecutter.project_name}}/.run/: gen_docs.run.xml  test.run.xml
{{cookiecutter.project_name}}/docs/: conf.py  index.rst
